{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 836,
  "lineage": "4f03c057-7831-d4cc-6ede-3b1209f51d5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "trino-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078c1149d8ad719a7",
            "arn": "arn:aws:ec2:ap-southeast-1:039178755962:instance/i-09cf0877f95d6ae6d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_profile_trino_master",
            "id": "i-09cf0877f95d6ae6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "trino-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ffce0d1d844edf7e",
            "private_dns": "ip-10-0-1-142.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.142",
            "public_ip": "13.250.58.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0789b532a7e9268d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af88422e4a86e660",
            "tags": {
              "Name": "trino-master-vd"
            },
            "tags_all": {
              "Name": "trino-master-vd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a1f7f9a9d0110be"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile_trino_master",
            "aws_iam_role.role_trino_for_glue_vd",
            "aws_iam_role.role_trino_vd",
            "aws_security_group.sg_tf",
            "aws_subnet.subnet_tf",
            "aws_vpc.vpc_tf",
            "data.template_file.user_data_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "trino-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078c1149d8ad719a7",
            "arn": "arn:aws:ec2:ap-southeast-1:039178755962:instance/i-0ff5c0287432ce24e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_profile_trino_worker",
            "id": "i-0ff5c0287432ce24e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "trino-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eabbee57896f9099",
            "private_dns": "ip-10-0-1-251.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_ip": "13.212.13.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df57b662e3140d58",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af88422e4a86e660",
            "tags": {
              "Name": "trino-worker-vd"
            },
            "tags_all": {
              "Name": "trino-worker-vd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a1f7f9a9d0110be"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile_trino_master",
            "aws_iam_instance_profile.instance_profile_trino_worker",
            "aws_iam_role.role_trino_for_glue_vd",
            "aws_iam_role.role_trino_vd",
            "aws_instance.trino-master",
            "aws_security_group.sg_tf",
            "aws_subnet.subnet_tf",
            "aws_vpc.vpc_tf",
            "data.template_file.user_data_master",
            "data.template_file.user_data_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:039178755962:internet-gateway/igw-0e020ce8b11159472",
            "id": "igw-0e020ce8b11159472",
            "owner_id": "039178755962",
            "tags": {
              "Name": "igw_tf"
            },
            "tags_all": {
              "Name": "igw_tf"
            },
            "vpc_id": "vpc-072a7cedc2fbbd2be"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:039178755962:route-table/rtb-085631540cb9c631e",
            "id": "rtb-085631540cb9c631e",
            "owner_id": "039178755962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e020ce8b11159472",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_tf"
            },
            "tags_all": {
              "Name": "rt_tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-072a7cedc2fbbd2be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c747996291fbcf37",
            "route_table_id": "rtb-085631540cb9c631e",
            "subnet_id": "subnet-0af88422e4a86e660"
          },
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_route_table.rt_tf",
            "aws_subnet.subnet_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:039178755962:security-group/sg-06a1f7f9a9d0110be",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a1f7f9a9d0110be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_tf",
            "name_prefix": "",
            "owner_id": "039178755962",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_tf"
            },
            "tags_all": {
              "Name": "sg_tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-072a7cedc2fbbd2be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:039178755962:subnet/subnet-0af88422e4a86e660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af88422e4a86e660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039178755962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_tf"
            },
            "tags_all": {
              "Name": "subnet_tf"
            },
            "vpc_id": "vpc-072a7cedc2fbbd2be"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:039178755962:vpc/vpc-072a7cedc2fbbd2be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0174caa30590f3270",
            "default_route_table_id": "rtb-060bd0ef9ff3ff58c",
            "default_security_group_id": "sg-0adbd4678146d9036",
            "dhcp_options_id": "dopt-787c861e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072a7cedc2fbbd2be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060bd0ef9ff3ff58c",
            "owner_id": "039178755962",
            "tags": {
              "Name": "vpc_tf"
            },
            "tags_all": {
              "Name": "vpc_tf"
            }
          }
        }
      ]
    }
  ]
}